--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -4,11 +4,16 @@
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
     <h1 class="display-3">You've Discovered My Secret!</h1>
-    <%userswithSecrets.forEach(function(user){%> 
+    <% userswithSecrets.forEach(function(user){ %>
+      <% user.secret.forEach(function(secret){ %>
+        <p class="secret-text"><%= secret %></p>
+    <%  }); %>
+    <% }); %>
+    <!-- <%userswithSecrets.forEach(function(user){%> 
         <p class="secret-text"><%=user.secret%></p>
   
       <% }) %>
-  
+   -->
   
     
     <hr>
